# image-processor

./: .gitignore  README.md
assets/: Insomnia.json
dashboard/: pubspec.yaml
dashboard/android/app/: build.gradle
dashboard/android/app/src/main/: AndroidManifest.xml
dashboard/lib/: main.dart
dashboard/lib/controller/: notification_controller.dart
dashboard/lib/pages/: login.dart  register.dart  take_picture.dart
dashboard/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
dashboard/lib/src/rust/api/: client.dart
dashboard/linux/flutter/: generated_plugins.cmake
dashboard/rust/: Cargo.toml
dashboard/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
dashboard/rust/src/api/: client.rs
dashboard/windows/flutter/: generated_plugins.cmake
services/: .env.example  .gitignore  Cargo.toml  docker-compose-db.yml  docker-compose-dev.yml  docker-compose-prod.yml
services/.cargo/: config.toml
services/auth/: Cargo.toml
services/auth/src/: main.rs
services/auth/src/repositories/: log.rs  user.rs
services/auth/src/routes/: health.rs  user.rs
services/database/: Cargo.toml
services/nginx/: nginx.conf
services/prisma/: schema.prisma
services/prisma-cli/: Cargo.toml
services/processor/: Cargo.toml
services/processor/src/: main.rs
services/processor/src/routes/: process.rs
services/processor/src/utils/: error.rs
