[package]
name = "rust_lib_dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.37"
reqwest = { version = "0.12.4", default-features = false, features = [
	"blocking",
	"json",
	"rustls-tls",
	"multipart",
] }
anyhow = { version = "1.0.49" }
serde_json = "1.0.117"
