[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["ViniciosLugli <vinicioslugli@gmail.com>"]

[dependencies]
database = { path = "../database" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
	"postgresql",
	"migrations",
	"mocking",
] }
actix-web = "4.6.0"
actix-session = { version = "0.9.0", features = ["redis-rs-session"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
bcrypt = "0.15.1"
chrono = { version = "0.4.30", features = ["serde"] }
